--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <title> Amiel's Bio</title>
 </head>
 <body>
-  <h2> Amiel Kollek's Webpage </h2>
+  <h2> Genevieve Fried's Webpage </h2>
 
   <p>
-    Hello, my name is Amiel. I study math and physics at McGill univeristy and I am going to make my own website!
+    Bloop
   </p>
   
   <h4> My Interests </h4>
@@ -14,10 +14,10 @@
   <p> Here are a few things I like: </p>
   
   <ul>
+    <li> Bloop </li>
     <li> Computers </li>
     <li> Math </li>
-    <li> Hiking </li>
-    <li> Physics </li>
+    <li> Literature </li>
   </ul>
 
 <!--
