--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-  <title> Amiel's Bio</title>
+  <title> Le Bio</title>
 </head>
 <body>
-  <h2> Genevieve Fried's Webpage </h2>
+  <h2> Genevieve Dame's Webpage </h2>
 
   <p>
     Bloop
@@ -15,9 +15,9 @@
   
   <ul>
     <li> Bloop </li>
+    <li> Grass </li>
     <li> Computers </li>
-    <li> Math </li>
-    <li> Literature </li>
+    <li> Dynamite </li>
   </ul>
 
 <!--
